# JupyterCluster

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TESTING_STEPS.md  config.example.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-mfsada-temp.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  branch-protection.yml  ci.yml  codeql.yml  e2e.yml  pr.yml  release.yml
ci/: create-bootstrap-token.py  jupytercluster-ci-values.yml  jupyterhub-minimal-values.yml  kind-config.yml  mfsada-temp-values.yaml  nrp-nautilus-template.yaml
helm/jupytercluster/: Chart.yaml  values.yaml
helm/jupytercluster/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
jupytercluster/: __init__.py  __main__.py  _version.py  app.py  auth.py  dbutil.py  hub.py  orm.py  pagination.py  spawner.py  utils.py
jupytercluster/alembic/: env.py
jupytercluster/alembic/versions/: 001_initial_schema.py  002_namespace_permissions.py  003_api_tokens.py
jupytercluster/api/: __init__.py  base.py  events.py  hubs.py  info.py  tokens.py  users.py
jupytercluster/handlers/: __init__.py  admin.py  base.py  error.py  home.py  hubs.py  login.py  oauth.py  profile.py
jupytercluster/static/css/: style.css
jupytercluster/templates/: admin.html  error.html  helm_values_editor.html  home.html  hub_create.html  hub_detail.html  login.html  page.html  profile.html
k8s/: deployment.yaml  namespace.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
scripts/: validate.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_spawner.py  test_templates.py
tests/e2e/: conftest.py  test_api.py  test_cors.py  test_deployments.py  test_errors.py  test_hubs.py  test_permissions.py
