[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupytercluster"
version = "0.1.0"
description = "Multi-hub management system for JupyterHub on Kubernetes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "JupyterCluster Contributors"}
]
keywords = ["jupyter", "jupyterhub", "kubernetes", "helm", "multi-tenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "tornado>=6.0",
    "sqlalchemy>=1.4",
    "traitlets>=5.0",
    "kubernetes>=24.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "oauthenticator>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/jupytercluster/jupytercluster"
Documentation = "https://jupytercluster.readthedocs.io"
Repository = "https://github.com/jupytercluster/jupytercluster"
Issues = "https://github.com/jupytercluster/jupytercluster/issues"

[tool.setuptools]
packages = ["jupytercluster"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

